--- a/bochs/cpu/avx/Makefile.in
+++ b/bochs/cpu/avx/Makefile.in
@@ -93,8 +93,8 @@ dist-clean: clean
 ###########################################
 avx.o: avx.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -102,8 +102,8 @@ avx.o: avx.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_int.h
 avx2.o: avx2.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -112,8 +112,8 @@ avx2.o: avx2.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../simd_compare.h
 avx512.o: avx512.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -122,8 +122,8 @@ avx512.o: avx512.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../simd_compare.h ../wide_int.h
 avx512_bitalg.o: avx512_bitalg.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -132,8 +132,8 @@ avx512_bitalg.o: avx512_bitalg.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../scalar_arith.h
 avx512_broadcast.o: avx512_broadcast.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -141,8 +141,8 @@ avx512_broadcast.o: avx512_broadcast.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_int.h
 avx512_cvt.o: avx512_cvt.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -150,8 +150,8 @@ avx512_cvt.o: avx512_cvt.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_int.h
 avx512_fma.o: avx512_fma.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -159,8 +159,8 @@ avx512_fma.o: avx512_fma.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_int.h ../simd_pfp.h
 avx512_mask16.o: avx512_mask16.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -168,8 +168,8 @@ avx512_mask16.o: avx512_mask16.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h
 avx512_mask32.o: avx512_mask32.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -177,8 +177,8 @@ avx512_mask32.o: avx512_mask32.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h
 avx512_mask64.o: avx512_mask64.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -186,8 +186,8 @@ avx512_mask64.o: avx512_mask64.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h
 avx512_mask8.o: avx512_mask8.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -195,8 +195,8 @@ avx512_mask8.o: avx512_mask8.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h
 avx512_move.o: avx512_move.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -204,8 +204,8 @@ avx512_move.o: avx512_move.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_int.h
 avx512_pfp.o: avx512_pfp.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -215,8 +215,8 @@ avx512_pfp.o: avx512_pfp.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h
  ../fpu/softfloat-specialize.h
 avx512_rcp14.o: avx512_rcp14.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -225,8 +225,8 @@ avx512_rcp14.o: avx512_rcp14.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../fpu/softfloat.h ../fpu/softfloat-round-pack.h ../simd_int.h
 avx512_rsqrt14.o: avx512_rsqrt14.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -235,8 +235,8 @@ avx512_rsqrt14.o: avx512_rsqrt14.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../fpu/softfloat.h ../fpu/softfloat-round-pack.h ../simd_int.h
 avx_cvt.o: avx_cvt.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -244,8 +244,8 @@ avx_cvt.o: avx_cvt.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h
 avx_fma.o: avx_fma.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -253,8 +253,8 @@ avx_fma.o: avx_fma.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_pfp.h
 avx_pfp.o: avx_pfp.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -263,8 +263,8 @@ avx_pfp.o: avx_pfp.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../fpu/softfloat.h ../simd_pfp.h ../simd_int.h
 gather.o: gather.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -272,8 +272,8 @@ gather.o: gather.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h
 tbm32.o: tbm32.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -281,8 +281,8 @@ tbm32.o: tbm32.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h ../scalar_arith.h
 tbm64.o: tbm64.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -290,8 +290,8 @@ tbm64.o: tbm64.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h ../scalar_arith.h
 vnni.o: vnni.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -299,8 +299,8 @@ vnni.o: vnni.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../svm.h ../cpuid.h ../stack.h ../access.h ../simd_int.h
 xop.o: xop.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
- ../../cpu/decoder/decoder.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../logio.h ../../memory/memory-bochs.h \
+ ../../cpu/decoder/decoder.h ../../gui/paramtree.h ../../logio.h \
+ ../../cpudb.h ../../memory/memory-bochs.h \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
