--- a/bochs/cpu/cpudb/Makefile.in
+++ b/bochs/cpu/cpudb/Makefile.in
@@ -94,7 +94,6 @@ dist-clean: clean
 amd/amd_k6_2_chomper.o: amd/amd_k6_2_chomper.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -103,7 +102,7 @@ amd/amd_k6_2_chomper.o: amd/amd_k6_2_chomper.@CPP_SUFFIX@ ../../bochs.h ../../co
 amd/athlon64_clawhammer.o: amd/athlon64_clawhammer.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -113,7 +112,6 @@ amd/athlon64_clawhammer.o: amd/athlon64_clawhammer.@CPP_SUFFIX@ ../../bochs.h \
 amd/athlon64_venice.o: amd/athlon64_venice.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -122,7 +120,7 @@ amd/athlon64_venice.o: amd/athlon64_venice.@CPP_SUFFIX@ ../../bochs.h ../../conf
 amd/phenomx3_8650_toliman.o: amd/phenomx3_8650_toliman.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -132,7 +130,6 @@ amd/phenomx3_8650_toliman.o: amd/phenomx3_8650_toliman.@CPP_SUFFIX@ ../../bochs.
 amd/ryzen.o: amd/ryzen.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -142,7 +139,6 @@ amd/ryzen.o: amd/ryzen.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
 amd/trinity_apu.o: amd/trinity_apu.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -152,7 +148,6 @@ amd/trinity_apu.o: amd/trinity_apu.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
 amd/turion64_tyler.o: amd/turion64_tyler.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -161,7 +156,6 @@ amd/turion64_tyler.o: amd/turion64_tyler.@CPP_SUFFIX@ ../../bochs.h ../../config
 amd/zambezi.o: amd/zambezi.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -171,7 +165,6 @@ amd/zambezi.o: amd/zambezi.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep
 intel/atom_n270.o: intel/atom_n270.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -181,7 +174,6 @@ intel/atom_n270.o: intel/atom_n270.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
 intel/broadwell_ult.o: intel/broadwell_ult.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -191,7 +183,7 @@ intel/broadwell_ult.o: intel/broadwell_ult.@CPP_SUFFIX@ ../../bochs.h ../../conf
 intel/core_duo_t2400_yonah.o: intel/core_duo_t2400_yonah.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -201,7 +193,7 @@ intel/core_duo_t2400_yonah.o: intel/core_duo_t2400_yonah.@CPP_SUFFIX@ ../../boch
 intel/core2_penryn_t9600.o: intel/core2_penryn_t9600.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -211,7 +203,7 @@ intel/core2_penryn_t9600.o: intel/core2_penryn_t9600.@CPP_SUFFIX@ ../../bochs.h 
 intel/corei5_arrandale_m520.o: intel/corei5_arrandale_m520.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -221,7 +213,7 @@ intel/corei5_arrandale_m520.o: intel/corei5_arrandale_m520.@CPP_SUFFIX@ ../../bo
 intel/corei5_lynnfield_750.o: intel/corei5_lynnfield_750.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -231,7 +223,7 @@ intel/corei5_lynnfield_750.o: intel/corei5_lynnfield_750.@CPP_SUFFIX@ ../../boch
 intel/corei7_haswell_4770.o: intel/corei7_haswell_4770.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -241,7 +233,7 @@ intel/corei7_haswell_4770.o: intel/corei7_haswell_4770.@CPP_SUFFIX@ ../../bochs.
 intel/corei7_ivy_bridge_3770K.o: intel/corei7_ivy_bridge_3770K.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -251,7 +243,7 @@ intel/corei7_ivy_bridge_3770K.o: intel/corei7_ivy_bridge_3770K.@CPP_SUFFIX@ ../.
 intel/corei7_sandy_bridge_2600K.o: intel/corei7_sandy_bridge_2600K.@CPP_SUFFIX@ \
  ../../bochs.h ../../config.h ../../osdep.h ../../bx_debug/debug.h \
  ../../config.h ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -261,7 +253,7 @@ intel/corei7_sandy_bridge_2600K.o: intel/corei7_sandy_bridge_2600K.@CPP_SUFFIX@ 
 intel/corei7_skylake-x.o: intel/corei7_skylake-x.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -271,7 +263,7 @@ intel/corei7_skylake-x.o: intel/corei7_skylake-x.@CPP_SUFFIX@ ../../bochs.h \
 intel/corei3_cnl.o: intel/corei3_cnl.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -281,7 +273,7 @@ intel/corei3_cnl.o: intel/corei3_cnl.@CPP_SUFFIX@ ../../bochs.h \
 intel/corei7_icelake-u.o: intel/corei7_icelake-u.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -291,7 +283,7 @@ intel/corei7_icelake-u.o: intel/corei7_icelake-u.@CPP_SUFFIX@ ../../bochs.h \
 intel/tigerlake.o: intel/tigerlake.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -301,7 +293,6 @@ intel/tigerlake.o: intel/tigerlake.@CPP_SUFFIX@ ../../bochs.h \
 intel/p2_klamath.o: intel/p2_klamath.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -310,7 +301,6 @@ intel/p2_klamath.o: intel/p2_klamath.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
 intel/p3_katmai.o: intel/p3_katmai.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -319,7 +309,7 @@ intel/p3_katmai.o: intel/p3_katmai.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
 intel/p4_prescott_celeron_336.o: intel/p4_prescott_celeron_336.@CPP_SUFFIX@ ../../bochs.h \
  ../../config.h ../../osdep.h ../../bx_debug/debug.h ../../config.h \
  ../../osdep.h ../../gui/siminterface.h ../../cpudb.h \
- ../../gui/paramtree.h ../../memory/memory-bochs.h ../../pc_system.h \
+ ../../gui/paramtree.h ../../pc_system.h \
  ../../gui/gui.h ../../instrument/stubs/instrument.h ../cpu.h \
  ../decoder/decoder.h ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h \
  ../fpu/status_w.h ../fpu/control_w.h ../crregs.h ../descriptor.h \
@@ -329,7 +319,6 @@ intel/p4_prescott_celeron_336.o: intel/p4_prescott_celeron_336.@CPP_SUFFIX@ ../.
 intel/p4_willamette.o: intel/p4_willamette.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -338,7 +327,6 @@ intel/p4_willamette.o: intel/p4_willamette.@CPP_SUFFIX@ ../../bochs.h ../../conf
 intel/pentium.o: intel/pentium.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../osdep.h \
  ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
@@ -347,7 +335,6 @@ intel/pentium.o: intel/pentium.@CPP_SUFFIX@ ../../bochs.h ../../config.h ../../o
 intel/pentium_mmx.o: intel/pentium_mmx.@CPP_SUFFIX@ ../../bochs.h ../../config.h \
  ../../osdep.h ../../bx_debug/debug.h ../../config.h ../../osdep.h \
  ../../gui/siminterface.h ../../cpudb.h ../../gui/paramtree.h \
- ../../memory/memory-bochs.h  \
  ../../instrument/stubs/instrument.h ../cpu.h ../decoder/decoder.h \
  ../i387.h ../fpu/softfloat.h ../fpu/tag_w.h ../fpu/status_w.h \
  ../fpu/control_w.h ../crregs.h ../descriptor.h ../decoder/instr.h \
